@@ -26,6 +26,7 @@ rpm: clean
 
 tests: all
 	(cd tests ; $(MAKE) tests)
+	(cd python ; $(MAKE) tests)
 	
 dist-hook:
 	(cd $(srcdir) ; tar -cf - --exclude CVS doc) | (cd $(distdir); tar xf -)
