@@ -1,3 +1,11 @@
+Fri Jan 28 16:51:46 CET 2005 Daniel Veillard <veillard@redhat.com>
+
+	* Makefile.am python/Makefile.am python/tests/Makefile.am
+	  python/tests/basic*.py: added python tests to regression tests
+	* libgamin/gam_api.c: fixed a connection bug on the clien side
+	* server/gam_poll.c: fixed a bug where some changes in a directory
+	  may not be caught
+
 Thu Jan 27 23:58:00 CET 2005 Daniel Veillard <veillard@redhat.com>
 
 	* libgamin/gam_data.c: cleanup
